--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -28,6 +28,6 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
           name: report
-          path: mochawesome-report
+          path: mochawesome-report/
     - run: npm ci
     - run: npm test
