--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -25,9 +25,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - uses: actions/upload-artifact@v4
-      with:
-          name: report
-          path: mochawesome-report/
     - run: npm ci
     - run: npm test
+
+    - name: Upload test report
+      if: always() # Ensures that the artifact is uploaded even if tests fail
+      uses: actions/upload-artifact@v4
+      with:
+        name: mochawesome-report
+        path: mochawesome-report/ 
